@@ -1,19 +1,14 @@
 ===  new/not tested  ===
 
 ======  TODO  =======
-enhance peak drag'n'drop
-draw_peak() -> more smooth
-move "Exit" from Help to File, or remove it. 
-Data->Recent files..., (saved in ~/.fityk/wxoptions)
-file with initial commands - ~/.fityk/init 
-Settings windows -- wxSpinCtrl; alphabetical order 
+Settings windows -- alphabetical order?
 arbitrary number of auxiliary windows 
 background toolbar -> "plot with(out) background" button should be toggled
                        by "o.plot +/-" command, etc.
 background mode -- problem with rectangle zooming, when background is large
 ---
 exporting to PostScript file and to metafile(clipboard) (Windows only) 
-optim. Q: should point circles should be drawed with non-transparent pen?
+optim. Q: point circles should be drawed with non-transparent pen?
 changing colors of peaks/phases/sum/etc - one dialog  
 Short-cuts (Ctrl-O, F1, etc.)
 exit-on-error = 1 -> MessageBox + stop including; now exiting 
