@@ -5,7 +5,7 @@ EXTRA_DIST = $(data_DATA) fitykhelp.xml cmdidx.xsl fitykhelp.html fitykhelp_img/
 all: fitykhelp.htb fitykhelp.html
 
 fitykhelp.htb: fitykhelp.xml cmdidx.xsl
-	export SGML_CATALOG_FILES=/usr/share/sgml/docbook/xml-dtd-4.1.2-1.0-8/
+	export SGML_CATALOG_FILES=/usr/share/sgml/docbook/xml-dtd-4.2/
 	xsltproc -o fitykhelp_with_idx.xml --nonet cmdidx.xsl fitykhelp.xml 
 	rm -rf fitykhelp_tmp/
 	mkdir fitykhelp_tmp
@@ -18,7 +18,7 @@ fitykhelp.htb: fitykhelp.xml cmdidx.xsl
 	mv -f fitykhelp_tmp/fitykhelp.zip ./fitykhelp.htb 
 
 fitykhelp.html: fitykhelp.xml cmdidx.xsl
-	export SGML_CATALOG_FILES=/usr/share/sgml/docbook/xml-dtd-4.1.2-1.0-8/
+	export SGML_CATALOG_FILES=/usr/share/sgml/docbook/xml-dtd-4.2/
 	xsltproc -o fitykhelp_with_idx.xml --nonet cmdidx.xsl fitykhelp.xml 
 	xmlto html-nochunks fitykhelp_with_idx.xml 
 	mv -f fitykhelp_with_idx.html fitykhelp.html 
