@@ -4,8 +4,8 @@
 <!-- $Id$ -->
 <xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
   <xsl:output method="xml" indent="yes" 
-          doctype-public="-//Norman Walsh//DTD DocBk XML V4.1//EN" 
-          doctype-system="http://nwalsh.com/docbook/xml/4.1/db3xml.dtd"/>
+          doctype-public="-//OASIS//DTD DocBook XML V4.2//EN" 
+          doctype-system="http://www.oasis-open.org/docbook/xml/4.2/docbookx.dtd"/>
 
   <xsl:template match="/">
     <xsl:copy/>
